--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -150,6 +150,8 @@ body{
 
 /* select your plan */
 
+
+
 .box{
     display: grid;
     grid-template-columns: repeat(3,1fr);
@@ -235,6 +237,8 @@ input[type="range"]::-webkit-slider-thumb {
 /* add-ons  */
 
 
+
+
 .right-side-hero-first{
     display: flex;
     justify-content: space-between;
@@ -268,6 +272,8 @@ input[type="range"]::-webkit-slider-thumb {
 
 
 /* summary */
+
+
 
 .right-summary-one{
     background-color: hsl(228, 38%, 97%);
@@ -313,4 +319,16 @@ input[type="range"]::-webkit-slider-thumb {
         font-size: 22px;
         color: blue;
      }
+}
+
+.right-side-second{
+    display: none;
+}
+
+.right-side-third{
+    display: none;
+}
+
+.right-side-fourth{
+    display: none;
 }
