--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -138,7 +138,7 @@ body{
     margin-top: 110px;
 
 }
-.next-btn a{
+.next-btn button{
     padding: 15px 20px;
     color: #fff;
     background-color:hsl(213, 96%, 18%);
