--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -139,6 +139,7 @@ body{
 
 }
 .next-btn button{
+    cursor: pointer;
     padding: 15px 20px;
     color: #fff;
     background-color:hsl(213, 96%, 18%);
@@ -163,6 +164,8 @@ body{
     padding: 15px 0px 15px 10px;
     border: 1px solid hsl(229, 23%, 86%);
     border-radius: 10px;
+    cursor: pointer;
+
 }
 .box-one-text{
     margin-top: 30px;
@@ -176,8 +179,15 @@ body{
         font-size: 13px;
         margin-top: 5px;
     }
+    h5{
+        color: hsl(231, 11%, 63%);
+        margin-top: 5px;
+        font-weight: 500;
+    }
+}
 
-
+.box-one.active {
+    border: 1px solid blue;
 }
 .yearly-plan{
     display: none;
