goback ve next butonların kodları tamamlandı

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -135,10 +135,16 @@ body {
 }
 
 
+
 .btns {
     display: flex;
     justify-content: space-between;
     margin-top: 110px;
+
+}
+
+.btns-one {
+    justify-content: end;
 
 }
 
